--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,8 @@ packaging==25.0
 pathspec==0.12.1
 pyinstaller==6.16.0
 pyinstaller-hooks-contrib==2025.9
+PyYAML==6.0.3
 requests==2.32.5
 ruff==0.14.3
 urllib3==2.5.0
+yamllint==1.37.1
