--- a/.github/workflows/static-tests.yaml
+++ b/.github/workflows/static-tests.yaml
@@ -7,8 +7,9 @@ on: [pull_request]
 jobs:
   yamllint:
     runs-on: ubuntu-latest
+    container: python:3.11-bookworm
     steps:
-      - uses: actions/checkout@v3
+      - uses: actions/checkout@v5
 
       - name: YAML Lint
         uses: ibiqlik/action-yamllint@v3
@@ -16,8 +17,9 @@ jobs:
 
   python-ruff:
     runs-on: ubuntu-latest
+    container: python:3.11-bookworm
     steps:
-      - uses: actions/checkout@v4
+      - uses: actions/checkout@v5
 
       - name: Install Ruff.
         run: pip install -r requirements.txt
@@ -29,10 +31,13 @@ jobs:
         run: ruff --verbose format .
 
 
+  # FIXME: We should be generating coverage reports, etc.
+  #
   python-unit:
     runs-on: ubuntu-latest
+    container: python:3.11-bookworm
     steps:
-      - uses: actions/checkout@v4
+      - uses: actions/checkout@v5
 
       - name: Install Pip requirements
         run: pip install -r requirements.txt
