--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -1,6 +1,10 @@
 ---
-name: Build Tasks
-on: [push]
+name: Build Tandem
+# yamllint disable-line rule:truthy
+on:
+  push:
+    branches:
+      - main
 
 jobs:
   tandem-binary:
